--- a/styles2.css
+++ b/styles2.css
@@ -4,12 +4,12 @@ body {
     font-family: Arial, sans-serif; /* Tipo de fuente */
     margin: 0; /* Sin márgenes */
     padding: 0; /* Sin relleno */
-    background-color: white; /* Fondo blanco */
+    background-color: #1e1e1e; /* Fondo blanco */
 }
 
 /* Estilo del encabezado */
 header {
-    background-color: rgb(32, 93, 203); /* Color de fondo azul */
+    background-color: #34495e; /* Color de fondo azul */
     color: white; /* Color del texto */
     padding: 15px 20px; /* Relleno del encabezado */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra del encabezado */
@@ -80,7 +80,7 @@ header {
 
 /* Estilo del botón desplegable */
 .dropbtn {
-    background-color: rgb(32, 93, 203); /* Color de fondo del botón */
+    background-color: #34495e; /* Color de fondo del botón */
     color: white; /* Color del texto */
     padding: 16px; /* Relleno del botón */
     font-size: 16px; /* Tamaño de fuente del botón */
@@ -98,7 +98,7 @@ header {
 .dropup-content {
     display: none; /* Oculto por defecto */
     position: absolute; /* Posición absoluta */
-    background-color: rgb(32, 93, 203); /* Color de fondo del menú */
+    background-color: #20354d; /* Color de fondo del menú */
     min-width: 160px; /* Ancho mínimo del menú */
 }
 
@@ -122,7 +122,7 @@ header {
 
 /* Estilo del botón al pasar el ratón */
 .dropup:hover .dropbtn {
-    background-color: #2980B9; /* Cambiar color de fondo del botón al pasar el ratón */
+    background-color: #3a4857; /* Cambiar color de fondo del botón al pasar el ratón */
 }
 
 /* Estilo del contenedor principal */
@@ -130,7 +130,7 @@ header {
     display: flex; /* Uso de flexbox para alinear elementos */
     justify-content: space-between; /* Espacio entre elementos */
     padding: 20px; /* Relleno del contenedor */
-    background-color: white; /* Fondo blanco */
+    background-color: #1e1e1e; /* Fondo blanco */
     flex-direction: row-reverse; /* Intercambia de lado el texto y la galería */
 }
 
@@ -201,20 +201,20 @@ input[type="radio"] {
     height: 15px; /* Altura del indicador */
     margin: 0 5px; /* Margen lateral */
     border-radius: 50%; /* Bordes redondeados */
-    background-color: #00aaff; /* Color de fondo del indicador */
+    background-color: #0004ff; /* Color de fondo del indicador */
     cursor: pointer; /* Cursor de puntero al pasar el ratón */
 }
 
 /* Estilo del indicador activo */
 input[type="radio"]:checked + label {
-    background-color: #00aaff; /* Color de fondo del indicador activo */
+    background-color: #058fdf; /* Color de fondo del indicador activo */
 }
 
 /* Estilo del texto de visión y misión */
 .vision-text, .mission-text {
     width: 45%; /* Ancho de las secciones de visión y misión */
     padding: 6%; /* Relleno */
-    background-color: #f9f9f9; /* Fondo gris claro */
+    background-color: #34495e; /* Fondo gris claro */
     box-shadow: 0 4px 10px rgba(12, 178, 229, 0.1); /* Sombra */
     border-radius: 10px; /* Bordes redondeados */
 }
@@ -224,11 +224,12 @@ input[type="radio"]:checked + label {
     padding-top: 5%; /* Relleno superior */
     text-align: center; /* Alineación central del texto */
     font-size: 3rem; /* Tamaño de fuente grande */
-    color: #00aaff; /* Color azul */
+    color: #ffffff; /* Color azul */
 }
 
 /* Estilo de los párrafos en visión y misión */
 .vision-text p, .mission-text p {
     font-size: 1.2rem; /* Tamaño de fuente */
     line-height: 1.6; /* Altura de línea */
+    color: #ffffff; /* Color azul */
 }
